fixed section-title alignent

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,7 @@ section {
     font-size: 55px;
     color: #024e76;
     border-bottom: 3px solid;
+    margin: 0 auto 25px;
 }
 
 .primary-border {
